# lightning

./: .editorconfig  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
apps/desktop/src/components/: app-shell.tsx  command-palette.tsx  shortcut-tile.test.tsx  shortcut-tile.tsx
apps/desktop/src/state/: capabilities.ts  editor.test.ts  editor.ts  settings.ts  shortcuts.ts
apps/desktop/src/views/: automations-view.tsx  editor-view.tsx  gallery-view.tsx  settings-view.tsx  shortcuts-view.tsx
crates/actions/: Cargo.toml
crates/actions/src/: lib.rs  registry.rs
crates/actions/src/control/: add_to_variable.rs  comment.rs  count.rs  get_item_from_list.rs  get_type.rs  get_variable.rs  mod.rs  nothing.rs  set_variable.rs  show_result.rs  wait.rs
crates/actions/src/date/: adjust_date.rs  current_date.rs  format_date.rs  mod.rs  time_between_dates.rs
crates/actions/src/math/: calculate.rs  list_statistics.rs  mod.rs  random_number.rs  round_number.rs
crates/actions/src/text/: base64_text.rs  change_case.rs  combine_text.rs  generate_uuid.rs  hash_text.rs  mod.rs  replace_text.rs  split_text.rs  text_literal.rs  text_statistics.rs  trim_text.rs  url_encode.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  permission.rs  run_log.rs  shortcut.rs
crates/core/src/content/: coerce.rs  mod.rs
crates/core/src/engine/: condition.rs  context.rs  mod.rs  progress.rs
crates/core/src/migrate/: mod.rs
crates/core/tests/: engine_integration.rs  schema_roundtrip.rs
crates/core/tests/fixtures/: branching.lightning  hello.lightning  loop.lightning
crates/core/tests/snapshots/: schema_roundtrip__representative_lightning_file.snap
crates/ipc-types/: Cargo.toml
crates/ipc-types/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform-bsd/: Cargo.toml
crates/platform-bsd/src/: imp.rs  lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: imp.rs  lib.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: imp.rs  lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: imp.rs  lib.rs
crates/platform/src/: capability.rs  lib.rs  support.rs  testing.rs  traits.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: action.rs  lib.rs
crates/store/: Cargo.toml
crates/store/src/: files.rs  index.rs  lib.rs  paths.rs
crates/triggers/: Cargo.toml
crates/triggers/src/: file_watch.rs  interval.rs  lib.rs  schedule.rs  scheduler.rs
docs/: release.md
docs/actions/: control.md  math-date.md  text.md
docs/architecture/: adr-0001-monorepo-structure.md  adr-0002-lightning-file-format.md  adr-0003-capability-model.md
docs/qa/: macos-smoke.md
installer/windows/: Directory.Build.props  Lightning.Installer.sln
installer/windows/Lightning.Deploy.Core/: InstallManifest.cs  Lightning.Deploy.Core.csproj  PayloadDeployer.cs  RegistryConfigurator.cs  RollbackJournal.cs  SignatureVerifier.cs  UpdateChecker.cs  UpdateManifest.cs
installer/windows/Lightning.Deploy.Core.Tests/: Lightning.Deploy.Core.Tests.csproj  PayloadDeployerTests.cs  RollbackJournalTests.cs  UpdateManifestTests.cs
installer/windows/Lightning.Installer/: App.xaml  App.xaml.cs  Lightning.Installer.csproj  MainWindow.xaml  MainWindow.xaml.cs
installer/windows/Lightning.Installer/Strings/en/: Resources.resw
installer/windows/Lightning.Installer/Strings/ko/: Resources.resw
installer/windows/Lightning.Installer/ViewModels/: InstallerViewModel.cs
installer/windows/Lightning.Uninstaller/: App.xaml  App.xaml.cs  Lightning.Uninstaller.csproj  MainWindow.xaml  MainWindow.xaml.cs
installer/windows/Lightning.Uninstaller/Strings/en/: Resources.resw
installer/windows/Lightning.Uninstaller/Strings/ko/: Resources.resw
installer/windows/Lightning.Uninstaller/ViewModels/: UninstallerViewModel.cs
installer/windows/Lightning.Updater/: Lightning.Updater.csproj  Program.cs  UpdateService.cs
packaging/bsd/: Makefile  pkg-descr
packaging/linux/: lightning.desktop
packaging/linux/appimage/: build-appimage.sh
packaging/linux/arch/: PKGBUILD
packaging/linux/debian/: control
packaging/linux/gentoo/: lightning-0.1.0.ebuild
packaging/macos/: entitlements.plist  notarize.sh
scripts/: check-licenses.mjs  check-targets.mjs  gen-bindings.mjs  gen-latest-json.mjs  gen-release-notes.mjs  sync-version.mjs  verify.mjs
tests/e2e/: eslint.config.mjs  package.json  tsconfig.json  wdio.conf.ts
tests/e2e/specs/: smoke.e2e.ts
