# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-core"
description = "Shortcut model, typed content system, async execution engine, and schema migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lightning-platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
