# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-platform-bsd"
description = "FreeBSD implementation of the Lightning platform layer (Tier 3, best-effort)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
lightning-platform = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
