# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-platform-linux"
description = "Linux implementation of the Lightning platform layer (X11 / Wayland / D-Bus / XDG)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
lightning-platform = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
