# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-platform-macos"
description = "macOS implementation of the Lightning platform layer (AppKit / AppleScript bridges)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
lightning-platform = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
