# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-platform-windows"
description = "Windows implementation of the Lightning platform layer (Win32 / WinRT)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
lightning-platform = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
