# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-platform"
description = "OS abstraction traits, per-platform support matrix, and runtime capability probing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
