# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-scripting"
description = "Sandboxed embedded QuickJS runtime powering the Run JavaScript action"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
lightning-actions = { workspace = true }
lightning-core = { workspace = true }
lightning-platform = { workspace = true }
rquickjs = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
