# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 neramc

[package]
name = "lightning-store"
description = "Persistence: .lightning files as truth, SQLite index and run history as rebuildable cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
lightning-core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
os-smoke = []

[lints]
workspace = true
